add drews testimonial.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -279,8 +279,7 @@
           <a>
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
               <div class="hidden-content">
-                <p>"His knowledge of data and Tableau is rock solid. He answered all our questions and delivered
-                  quickly!"</p>
+                <p>"Ben did an exceptional job demonstrating both technical expertise and a keen eye for design. He was also highly collaborative, always willing to listen to feedback and make imporvements quickly"</p>
                 <h4>- Drew</h4>
 
               </div>
