--- a/views/index.hbs
+++ b/views/index.hbs
@@ -261,7 +261,7 @@
         <div style="height: 400px" class="col-lg-6 col-sm-6">
           <a>
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
-              <div class="hidden-content">
+              <div style="min-height: 300px" class="hidden-content">
                 <p>"Ben is unbelievable. He is quick, creative, and reliable. The application exeeded expectations."</p>
                 <h4>- Joe </h4>
 
@@ -278,7 +278,7 @@
         <div style="height: 400px" class="col-lg-6 col-sm-6">
           <a>
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
-              <div class="hidden-content">
+              <div style="min-height: 300px" class="hidden-content">
                 <p>"Ben did an exceptional job demonstrating both technical expertise and a keen eye for design. He was also highly collaborative, always willing to listen to feedback and make imporvements quickly"</p>
                 <h4>- Drew</h4>
 
