--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,13 +15,17 @@
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
   <!-- Additional CSS Files -->
   <link rel="stylesheet" href="assets3/css/fontawesome.css">
   <link rel="stylesheet" href="assets3/css/templatemo-space-dynamic.css">
   <link rel="stylesheet" href="assets3/css/animated.css">
   <link rel="stylesheet" href="assets3/css/owl.css">
+
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css">
+
 </head>
 
 <body>
@@ -121,12 +125,13 @@
             <div class="row">
               <div class="col-lg-4">
                 <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
+                  <h4>Data Storage</h4>
+
                   <div class="icon">
                     <img style="border-radius: 50%; border: solid; border-width: 5px; border-color: #213b70"
                       src="assets3/images/dbicon.png" alt="reporting">
                   </div>
                   <div class="right-text">
-                    <h4>Data Storage</h4>
                     <p>Data storage can be complex whether you are working with EDWs, SQL or NoSQL datbases, or Excel
                       files. Let's make sure your data is stored and accessed correctly and securely! </p>
                   </div>
@@ -134,12 +139,13 @@
               </div>
               <div class="col-lg-4">
                 <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="0.7s">
+                  <h4>Data Manipulation</h4>
+
                   <div class="icon">
                     <img style="border-radius: 50%; border: solid; border-width: 5px; border-color: #213b70"
                       src="assets3/images/sqlicon.png" alt="">
                   </div>
                   <div class="right-text">
-                    <h4>Data Manipulation</h4>
                     <p>Data is bigger and more challenging than ever. Having extensive SQL knowledge allows me to
                       prepare, merge, and structure your data appropriately to empower your business! </p>
                   </div>
@@ -147,12 +153,13 @@
               </div>
               <div class="col-lg-4">
                 <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="0.9s">
+                  <h4>Data Retrieval</h4>
+
                   <div class="icon">
                     <img style="border-radius: 50%; border: solid; border-width: 5px; border-color: #213b70"
                       src="assets3/images/apiicon.png" alt="">
                   </div>
                   <div class="right-text">
-                    <h4>Data Retrieval</h4>
                     <p>Automation and simplicity is the goal. Let's find ways to access your data quickly, allowing your
                       team to get to the analytics faster. In most cases we'll use the industry standard, APIs!.</p>
                   </div>
@@ -160,12 +167,13 @@
               </div>
               <div class="col-lg-4">
                 <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="1.1s">
+                  <h4>Data Analytics</h4>
+
                   <div class="icon">
                     <img style="border-radius: 50%; border: solid; border-width: 5px; border-color: #213b70"
                       src="assets3/images/analyticsicon.png" alt="">
                   </div>
                   <div class="right-text">
-                    <h4>Data Analytics</h4>
                     <p>Analytics is my bread-&-butter. With two Tableau Desktop certifications and over 10+ years
                       utilizing the Tableau Suite of tools, I have created 100s of Tableau Dashboards and conducted 50+
                       trainings/presentations.</p>
@@ -173,13 +181,15 @@
                 </div>
               </div>
               <div class="col-lg-4">
+
                 <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="1.1s">
+                  <h4>App Development</h4>
                   <div class="icon">
                     <img style="border-radius: 50%; border: solid; border-width: 5px; border-color: #213b70"
                       src="assets3/images/appicon.png" alt="">
                   </div>
+
                   <div class="right-text">
-                    <h4>Application Development</h4>
                     <p>I became a Full Stack Developer in 2018! For those of you who are looking for out-of-the-box
                       solutions with fully customizable logic, I can create any web application you need (React, JS,
                       CSS, HTML, WIX, WordPress, Heroku).</p>
@@ -188,14 +198,16 @@
               </div>
               <div class="col-lg-4">
                 <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="1.1s">
+                  <h4>Embedded Analytics</h4>
+
                   <div class="icon">
                     <img style="border-radius: 50%; border: solid; border-width: 5px; border-color: #213b70"
                       src="assets3/images/embeddedicon.png" alt="">
                   </div>
                   <div class="right-text">
-                    <h4>Embedded Analytics</h4>
                     <p>Need your analytics to be accessed in a web or mobile app? I love the challenge of merging
                       Analytics with Web Development to create a user experience worth adopting!</p>
+
                     {{!-- <div class="row">
                       <div class="col">
                         <div class="main-blue-button"><a style="width: 150px; text-align: center; color: white"
@@ -231,8 +243,8 @@
                           <param name='display_overlay' value='yes' />
                           <param name='display_count' value='yes' />
                           <param name='language' value='en-US' />
-                          <param name="toolbar" value="no"
-                        </object></div>
+                          <param name="toolbar" value="no" </object>
+                      </div>
                       <script
                         type='text/javascript'>                    var divElement = document.getElementById('viz1727858640378'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '300px'; vizElement.style.height = '927px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '300px'; vizElement.style.height = '927px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '727px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
                     </div> --}}
@@ -247,7 +259,7 @@
   </div>
 
 
-
+  {{!-- TESTIMONIALS --}}
   <div id="portfolio" class="our-portfolio section">
     <div class="container">
       <div class="row">
@@ -259,46 +271,48 @@
       </div>
       <div class="row">
         <div style="height: 400px" class="col-lg-6 col-sm-6">
-          <a>
-            <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
-              <div style="min-height: 300px" class="hidden-content">
-                <p>"Ben is unbelievable. He is quick, creative, and reliable. The application exeeded expectations."</p>
-                <h4>- Joe </h4>
+          <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
+            <div style="min-height: 400px" class="hidden-content">
+              <p>"Ben is unbelievable. He is quick, creative, and reliable. The application exeeded expectations."</p>
+              <h4>- Joe </h4>
 
-              </div>
-              <div style="height: 100%; min-height: 300px" class="showed-content">
-                <img style="height: 100px" src="assets3/images/mlpproj.png" alt="">
-                <h4>Major League Pickleball</h4>
-                <h4 style="color: #f64243">(React.JS)</h4>
-                <p>Fully customized web application for live scoring!</p>
-              </div>
             </div>
-          </a>
+            <div style="height: 100%; min-height: 300px" class="showed-content">
+              <img style="height: 100px" src="assets3/images/mlpproj.png" alt="">
+              <h4>Major League Pickleball</h4>
+              <h4 style="color: #f64243">(React.JS)</h4>
+              <p>Fully customized web application for live scoring!</p>
+              <div class="main-red-button">
+                <a href="https://scores.majorleaguepickleball.net/">View on Mobile!</a>
+              </div>
+
+            </div>
+          </div>
         </div>
         <div style="height: 400px" class="col-lg-6 col-sm-6">
-          <a>
-            <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
-              <div style="min-height: 300px" class="hidden-content">
-                <p>"Ben did an exceptional job demonstrating both technical expertise and a keen eye for design. He was also highly collaborative, always willing to listen to feedback and make imporvements quickly"</p>
-                <h4>- Drew</h4>
-
-              </div>
-              <div style="height: 100%; min-height: 300px" class="showed-content">
-                <img style="height: 100px" src="assets3/images/kuproj.png" alt="">
-                <h4>KU State of the States</h4>
-                <h4 style="color: #f64243">(BI Dev & Consultation)</h4>
-
-                <p>Tableau development and training!</p>
+          <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
+            <div style="min-height: 400px" class="hidden-content">
+              <p>"Ben did an exceptional job demonstrating both technical expertise and a keen eye for design. He was
+                also highly collaborative, always willing to listen to feedback and make imporvements quickly"</p>
+              <h4>- Drew</h4>
+            </div>
+            <div style="height: 100%; min-height: 300px" class="showed-content">
+              <img style="height: 100px" src="assets3/images/kuproj.png" alt="">
+              <h4>KU State of the States</h4>
+              <h4 style="color: #0da0e4">(BI Dev & Consultation)</h4>
+              <p>Tableau development and training!</p>
+              <div class="main-blue-button">
+                <a href="https://stateofthestates.ku.edu/chart-creator">View on Desktop!</a>
               </div>
             </div>
-          </a>
+          </div>
         </div>
-
       </div>
     </div>
   </div>
+ 
 
-
+  {{!-- TECH --}}
   <div class="scroller" data-direction="right" data-speed="fast">
     <div style="text-align: center; justify-content: center; align-items: center;" class="container">
       <div style="text-align: center; justify-content: center; align-items: center;" class="row">
@@ -323,6 +337,7 @@
       <img class="scrollingcompanies" src="assets3/images/scrollreact.png" alt="" />
       <img class="scrollingcompanies" src="assets3/images/scrollsqlserver.png" alt="" />
       <img class="scrollingcompanies" src="assets3/images/scrolltableau.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollsnow.png" alt="" />
 
       <img class="scrollingcompanies" src="assets3/images/scrollblank.png" alt="" />
       <img class="scrollingcompanies" src="assets3/images/scrollcss.png" alt="" />
@@ -337,6 +352,7 @@
       <img class="scrollingcompanies" src="assets3/images/scrollreact.png" alt="" />
       <img class="scrollingcompanies" src="assets3/images/scrollsqlserver.png" alt="" />
       <img class="scrollingcompanies" src="assets3/images/scrolltableau.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollsnow.png" alt="" />
 
       <img class="scrollingcompanies" src="assets3/images/scrollblank.png" alt="" />
       <img class="scrollingcompanies" src="assets3/images/scrollcss.png" alt="" />
@@ -351,8 +367,11 @@
       <img class="scrollingcompanies" src="assets3/images/scrollreact.png" alt="" />
       <img class="scrollingcompanies" src="assets3/images/scrollsqlserver.png" alt="" />
       <img class="scrollingcompanies" src="assets3/images/scrolltableau.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollsnow.png" alt="" />
+
     </div>
   </div>
+  {{!-- CLIENTS --}}
   <div class="scroller" data-direction="right" data-speed="slow">
     <div style="text-align: center; justify-content: center; align-items: center;" class="container">
       <div style="text-align: center; justify-content: center; align-items: center;" class="row">
@@ -411,7 +430,7 @@
       </div>
     </div>
   </div>
-
+  {{!-- CONTACT --}}
   <footer>
     <div class="container">
       <div class="row">
@@ -476,6 +495,15 @@
       }
     });
   </script>
+<script>
+  window.mobileCheck = function() {
+  let check = false;
+  (function(a){if(/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|iris|kindle|lge |maemo|midp|mmp|mobile.+firefox|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows ce|xda|xiino/i.test(a)||/1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(a.substr(0,4))) check = true;})(navigator.userAgent||navigator.vendor||window.opera);
+  return check;
+};
+alert(mobileCheck);
+</script>
+
 </body>
 
 </html>
