update logic to have url change in javascript.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -283,7 +283,7 @@
               <h4 style="color: #f64243">(React.JS)</h4>
               <p>Fully customized web application for live scoring!</p>
               <div class="main-red-button">
-                <a onclick="checkdevise('Mobile')" href="https://scores.majorleaguepickleball.net/">View on Mobile!</a>
+                <a onclick="checkdevise('Mobile','https://scores.majorleaguepickleball.net/')">View on Mobile!</a>
               </div>
 
             </div>
@@ -302,7 +302,8 @@
               <h4 style="color: #0da0e4">(BI Dev & Consultation)</h4>
               <p>Tableau development and training!</p>
               <div class="main-blue-button">
-                <a onclick="checkdevise('Desktop')" href="https://stateofthestates.ku.edu/chart-creator">View on Desktop!</a>
+                <a onclick="checkdevise('Desktop','https://stateofthestates.ku.edu/chart-creator')">View on
+                  Desktop!</a>
               </div>
             </div>
           </div>
@@ -310,7 +311,7 @@
       </div>
     </div>
   </div>
- 
+
 
   {{!-- TECH --}}
   <div class="scroller" data-direction="right" data-speed="fast">
@@ -495,26 +496,28 @@
       }
     });
   </script>
-<script>
-function isMobile() {
-  const regex = /Mobi|Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i;
-  return regex.test(navigator.userAgent);
-}
+  <script>
+    function isMobile() {
+      const regex = /Mobi|Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i;
+      return regex.test(navigator.userAgent);
+    }
 
-if (isMobile()) {
-  var deviseType;
-  deviseType='Mobile'
-} else {
-  deviseType='Desktop'
-}
+    if (isMobile()) {
+      var deviseType;
+      deviseType = 'Mobile'
+    } else {
+      deviseType = 'Desktop'
+    }
 
-function checkdevise(devise){
-  if (devise!=deviseType){
-    alert("You are not utilizing the recomended device!")
-  }
-}
-isMobile();
-</script>
+    function checkdevise(devise, urlPassed) {
+      if (devise != deviseType) {
+        alert("You are not utilizing the recomended device!")
+      } else {
+        document.location.href = urlPassed;
+      }
+    }
+    isMobile();
+  </script>
 
 </body>
 
