--- a/views/index.hbs
+++ b/views/index.hbs
@@ -283,7 +283,7 @@
               <h4 style="color: #f64243">(React.JS)</h4>
               <p>Fully customized web application for live scoring!</p>
               <div class="main-red-button">
-                <a onclick="checkdevise('Mobile','https://scores.majorleaguepickleball.net/')">View on Mobile!</a>
+                <a style="color: white; cursor: pointer" onclick="checkdevise('Mobile','https://scores.majorleaguepickleball.net/')">View on Mobile!</a>
               </div>
 
             </div>
@@ -302,7 +302,7 @@
               <h4 style="color: #0da0e4">(BI Dev & Consultation)</h4>
               <p>Tableau development and training!</p>
               <div class="main-blue-button">
-                <a onclick="checkdevise('Desktop','https://stateofthestates.ku.edu/chart-creator')">View on
+                <a style="color: white; cursor: pointer" onclick="checkdevise('Desktop','https://stateofthestates.ku.edu/chart-creator')">View on
                   Desktop!</a>
               </div>
             </div>
