--- a/views/index.hbs
+++ b/views/index.hbs
@@ -270,7 +270,7 @@
         </div>
       </div>
       <div class="row">
-        <div style="height: 400px" class="col-lg-6 col-sm-6">
+        <div style="height: 400px; padding-top: 50px" class="col-lg-6 col-sm-6">
           <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
             <div style="min-height: 400px" class="hidden-content">
               <p>"Ben is unbelievable. He is quick, creative, and reliable. The application exeeded expectations."</p>
@@ -289,7 +289,7 @@
             </div>
           </div>
         </div>
-        <div style="height: 400px" class="col-lg-6 col-sm-6">
+        <div style="height: 400px; padding-top: 50px" class="col-lg-6 col-sm-6">
           <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
             <div style="min-height: 400px" class="hidden-content">
               <p>"Ben did an exceptional job demonstrating both technical expertise and a keen eye for design. He was
@@ -319,7 +319,7 @@
       <div style="text-align: center; justify-content: center; align-items: center;" class="row">
         <div>
           <div class="section-heading  wow bounceIn" data-wow-duration="1s" data-wow-delay="0.2s">
-            <h2 style="text-align: center"> <em>Technologies</em></h2>
+            <h2 style="text-align: center; padding-top: 50px"> <em>Technologies</em></h2>
           </div>
         </div>
       </div>
