--- a/views/index.hbs
+++ b/views/index.hbs
@@ -270,40 +270,51 @@
         </div>
       </div>
       <div class="row">
-        <div style="height: 400px; padding-top: 50px" class="col-lg-6 col-sm-6">
-          <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
-            <div style="min-height: 400px" class="hidden-content">
-              <p>"Ben is unbelievable. He is quick, creative, and reliable. The application exeeded expectations."</p>
-              <h4>- Joe </h4>
+        <div style="height: 500px; padding-top: 50px; padding-bottom: 50px" class="col-lg-6 col-sm-6">
+          <div class="wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
 
-            </div>
-            <div style="height: 100%; min-height: 300px" class="showed-content">
+            <div style="height: 100%; min-height: 250px" class="showed-content">
               <img style="height: 100px" src="assets3/images/mlpproj.png" alt="">
               <h4>Major League Pickleball</h4>
               <h4 style="color: #f64243">(React.JS)</h4>
               <p>Fully customized web application for live scoring!</p>
               <div class="main-red-button">
-                <a style="color: white; cursor: pointer" onclick="checkdevise('Mobile','https://scores.majorleaguepickleball.net/')">View on Mobile!</a>
+                <a style="color: white; cursor: pointer"
+                  onclick="checkdevise('Mobile','https://scores.majorleaguepickleball.net/')">View on Mobile!</a>
+              </div>
+              <div class="item testimonial main-blue-button">
+                <a style="color: white; cursor: pointer">Testimonial</a>
+                <div style="min-height: 200px" class="hidden-content">
+                  <p>"Ben is unbelievable. He is quick, creative, and reliable. The application exeeded expectations."
+                  </p>
+                  <h4>- Joe </h4>
+
+                </div>
               </div>
 
             </div>
           </div>
         </div>
-        <div style="height: 400px; padding-top: 50px" class="col-lg-6 col-sm-6">
-          <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
-            <div style="min-height: 400px" class="hidden-content">
-              <p>"Ben did an exceptional job demonstrating both technical expertise and a keen eye for design. He was
-                also highly collaborative, always willing to listen to feedback and make imporvements quickly"</p>
-              <h4>- Drew</h4>
-            </div>
-            <div style="height: 100%; min-height: 300px" class="showed-content">
+        <div style="height: 500px; padding-top: 50px; padding-bottom: 50px" class="col-lg-6 col-sm-6">
+          <div class=" wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
+            <div style="height: 100%; min-height: 250px" class="showed-content">
               <img style="height: 100px" src="assets3/images/kuproj.png" alt="">
               <h4>KU State of the States</h4>
               <h4 style="color: #0da0e4">(BI Dev & Consultation)</h4>
               <p>Tableau development and training!</p>
-              <div class="main-blue-button">
-                <a style="color: white; cursor: pointer" onclick="checkdevise('Desktop','https://stateofthestates.ku.edu/chart-creator')">View on
+              <div class="main-red-button">
+                <a style="color: white; cursor: pointer"
+                  onclick="checkdevise('Desktop','https://stateofthestates.ku.edu/chart-creator')">View on
                   Desktop!</a>
+              </div>
+              <div class="item testimonial main-blue-button">
+                <a style="color: white; cursor: pointer">Testimonial</a>
+                <div style="min-height: 200px" class="hidden-content">
+                  <p>"Ben did an exceptional job demonstrating both technical expertise and a keen eye for design. He was
+                also highly collaborative, always willing to listen to feedback and make imporvements quickly"</p>
+              <h4>- Drew</h4>
+
+                </div>
               </div>
             </div>
           </div>
