add tableau demo.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -270,7 +270,32 @@
         </div>
       </div>
       <div class="row">
-        <div style="height: 500px; padding-top: 50px; padding-bottom: 50px" class="col-lg-6 col-sm-6">
+       
+        <div style="height: 500px; padding-top: 50px; padding-bottom: 50px" class="col-lg-4 col-sm-4">
+          <div class=" wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
+            <div style="height: 100%; min-height: 250px" class="showed-content">
+              <img style="height: 100px" src="assets3/images/kuproj.png" alt="">
+              <h4>KU State of the States</h4>
+              <h4 style="color: #0da0e4">(BI Dev & Consultation)</h4>
+              <p>Tableau development and training!</p>
+              <div class="main-red-button">
+                <a style="color: white; cursor: pointer"
+                  onclick="checkdevise('Desktop','https://stateofthestates.ku.edu/chart-creator')">View on
+                  Desktop!</a>
+              </div>
+              <div class="item testimonial main-blue-button">
+                <a style="color: white; cursor: pointer">Testimonial</a>
+                <div style="min-height: 200px" class="hidden-content">
+                  <p>"Ben did an exceptional job demonstrating both technical expertise and design. He was
+                also highly collaborative to make imporvements quickly"</p>
+              <h4>- Drew</h4>
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+         <div style="height: 500px; padding-top: 50px; padding-bottom: 50px" class="col-lg-4 col-sm-4">
           <div class="wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
 
             <div style="height: 100%; min-height: 250px" class="showed-content">
@@ -295,27 +320,19 @@
             </div>
           </div>
         </div>
-        <div style="height: 500px; padding-top: 50px; padding-bottom: 50px" class="col-lg-6 col-sm-6">
+        <div style="height: 500px; padding-top: 50px; padding-bottom: 50px" class="col-lg-4 col-sm-4">
           <div class=" wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
             <div style="height: 100%; min-height: 250px" class="showed-content">
               <img style="height: 100px" src="assets3/images/kuproj.png" alt="">
-              <h4>KU State of the States</h4>
-              <h4 style="color: #0da0e4">(BI Dev & Consultation)</h4>
-              <p>Tableau development and training!</p>
+              <h4>BI Show Case</h4>
+              <h4 style="color: #0da0e4">(Tableau Desktop)</h4>
+              <p>Demonstrating technical and story telling abilities.</p>
               <div class="main-red-button">
                 <a style="color: white; cursor: pointer"
-                  onclick="checkdevise('Desktop','https://stateofthestates.ku.edu/chart-creator')">View on
+                  onclick="checkdevise('Desktop','https://public.tableau.com/views/ReturnAnalysis_17281214296170/HowManyOrdersReturned?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link')">View on
                   Desktop!</a>
               </div>
-              <div class="item testimonial main-blue-button">
-                <a style="color: white; cursor: pointer">Testimonial</a>
-                <div style="min-height: 200px" class="hidden-content">
-                  <p>"Ben did an exceptional job demonstrating both technical expertise and a keen eye for design. He was
-                also highly collaborative, always willing to listen to feedback and make imporvements quickly"</p>
-              <h4>- Drew</h4>
-
-                </div>
-              </div>
+              
             </div>
           </div>
         </div>
