update image for tableau showcase.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -276,7 +276,7 @@
             <div style="height: 100%; min-height: 250px" class="showed-content">
               <img style="height: 100px" src="assets3/images/kuproj.png" alt="">
               <h4>KU State of the States</h4>
-              <h4 style="color: #0da0e4">(BI Dev & Consultation)</h4>
+              <h5 style="color: #0da0e4">(BI Dev & Consultation)</h5>
               <p>Tableau development and training!</p>
               <div class="main-red-button">
                 <a style="color: white; cursor: pointer"
@@ -301,7 +301,7 @@
             <div style="height: 100%; min-height: 250px" class="showed-content">
               <img style="height: 100px" src="assets3/images/mlpproj.png" alt="">
               <h4>Major League Pickleball</h4>
-              <h4 style="color: #f64243">(React.JS)</h4>
+              <h5 style="color: #f64243">(React.JS & Firebase)</h5>
               <p>Fully customized web application for live scoring!</p>
               <div class="main-red-button">
                 <a style="color: white; cursor: pointer"
@@ -323,14 +323,18 @@
         <div style="height: 500px; padding-top: 50px; padding-bottom: 50px" class="col-lg-4 col-sm-4">
           <div class=" wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
             <div style="height: 100%; min-height: 250px" class="showed-content">
-              <img style="height: 100px" src="assets3/images/kuproj.png" alt="">
-              <h4>BI Show Case</h4>
-              <h4 style="color: #0da0e4">(Tableau Desktop)</h4>
+              <img style="height: 100px" src="assets3/images/returns.png" alt="">
+              <h4>BI Tableau Show Case</h4>
+              <h5 style="color: #0da0e4">(Tableau Public)</h5>
               <p>Demonstrating technical and story telling abilities.</p>
               <div class="main-red-button">
                 <a style="color: white; cursor: pointer"
                   onclick="checkdevise('Desktop','https://public.tableau.com/views/ReturnAnalysis_17281214296170/HowManyOrdersReturned?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link')">View on
                   Desktop!</a>
+              </div>
+              <div class="main-link-button">
+                <a style="color: white;"
+                  >HI :)</a>
               </div>
               
             </div>
