--- a/public/assets3/css/templatemo-space-dynamic.css
+++ b/public/assets3/css/templatemo-space-dynamic.css
@@ -211,13 +211,15 @@ body {
 
 .main-link-button a {
   display: inline-block;
-  background-color: #03a4ed;
+  background-color: white;
 
   font-size: 15px;
   font-weight: 400;
   color: white;
   text-transform: capitalize;
   padding: 12px 25px;
+  margin: 12px 12px;
+
   border-radius: 23px;
   letter-spacing: 0.25px;
 }
