--- a/views/index.hbs
+++ b/views/index.hbs
@@ -324,7 +324,7 @@
           <div class=" wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
             <div style="height: 100%; min-height: 250px" class="showed-content">
               <img style="height: 100px" src="assets3/images/returns.png" alt="">
-              <h4>BI Tableau Show Case</h4>
+              <h4>BI Tableau Showcase</h4>
               <h5 style="color: #0da0e4">(Tableau Public)</h5>
               <p>Demonstrating technical and story telling abilities.</p>
               <div class="main-red-button">
