--- a/views/index.hbs
+++ b/views/index.hbs
@@ -260,11 +260,11 @@
 
 
   {{!-- TESTIMONIALS --}}
-  <div id="portfolio" class="our-portfolio section">
+  <div style="margin-top: -100px" id="portfolio" class="our-portfolio section">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 offset-lg-3">
-          <div class="section-heading  wow bounceIn" data-wow-duration="1s" data-wow-delay="0.2s">
+          <div  class="section-heading  wow bounceIn" data-wow-duration="1s" data-wow-delay="0.2s">
             <h2><em>Projects</em> &amp; <span>Client Testimonials</span></h2>
           </div>
         </div>
