--- a/views/picklepodz.hbs
+++ b/views/picklepodz.hbs
@@ -435,9 +435,9 @@ Back
       </div>
     </div>
     <div class="col-md-6">
-      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+      <div class="row g-0 border rounded flex-md-row mb-4 shadow-sm ">
         <div class="col p-4 d-flex flex-column position-static">
-            <div id="ball" style="margin-left: -700px; margin-bottom: -190px;">
+            <div id="ball" style="">
     <div id="container"> <canvas width="320" height="566" style="width: 481px; height: 850px;"></canvas></div>
       </div>
     </div>
